inspect stack during error reporting

XMLWordPrintable

    • b16

        We already inspect the registers during error reporting, but some important pointers may be only on stack, especially on architectures which don't have so many registers.
        Since hs_err files are often all we get after a crash, it is often valuable to spend a little space for more information about what's referenced on top of the stack.

        This feature inspects the content of 8 stack slots of the top of the stack. The new section "Stack slot to memory mapping" shows up in hs_err files when a context is given and the output looks like the following example:

        Stack slot to memory mapping:
        stack at sp + 0 slots: 0xffffffff7b3b5c24: ucrypto_digest_final+0 in /lib/sparcv9/libucrypto.so.1 at 0xffffffff7b300000
        stack at sp + 1 slots: 0x0000000100df6b50 points into unknown readable memory: 00 00 00 00 00 00 00 00
        stack at sp + 2 slots: 0x0000000000000003 is an unknown value
        stack at sp + 3 slots: 0xffffffff06a05bf0: _GLOBAL_OFFSET_TABLE_+0 in /jvm_12/lib/libj2ucrypto.so at 0xffffffff06900000
        stack at sp + 4 slots: 0xffffffff7f18b7a8: __malloc_lock+0x18 in /lib/sparcv9/libc.so.1 at 0xffffffff7ef00000
        stack at sp + 5 slots: 0xffffffff06a05f48: _PROCEDURE_LINKAGE_TABLE_+0x348 in /jvm_12/lib/libj2ucrypto.so at 0xffffffff06900000
        stack at sp + 6 slots: 0x0 is NULL
        stack at sp + 7 slots: 0x0000000100df6b50 points into unknown readable memory: 00 00 00 00 00 00 00 00

              Assignee:
              Martin Doerr
              Reporter:
              Martin Doerr
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: