8211852: inspect stack during error reporting

Reviewed-by: dholmes, goetz